# LlamaEdge

./: .gitignore  Cargo.toml  help.html  search-index.js  settings.html
.github/workflows/: build.yml  test_api_server.yml
crates/chat-prompts/: Cargo.toml
crates/endpoints/: Cargo.toml
crates/llama-core/: Cargo.toml
crates/llamaedge/: Cargo.toml  Makefile  README.md
crates/llamaedge/.cargo/: config.toml
crates/llamaedge/src/: client.rs  error.rs  lib.rs
llama-api-server/: Cargo.toml
llama-chat/: Cargo.toml
llama-simple/: Cargo.toml
llama_core/: all.html  constant.ARCHIVES_DIR.html  enum.RunningMode.html  enum.StableDiffusionTask.html  fn.get_plugin_info.html  fn.init_ggml_context.html  fn.init_ggml_rag_context.html  fn.init_piper_context.html  fn.init_sd_context_with_full_model.html  fn.init_sd_context_with_standalone_model.html  fn.init_whisper_context.html  fn.running_mode.html  index.html  struct.PluginInfo.html
llama_core/audio/: fn.audio_transcriptions.html  fn.audio_translations.html  fn.create_speech.html  index.html
llama_core/chat/: fn.chat.html  fn.chat_completions.html  fn.chat_completions_stream.html  index.html
llama_core/completions/: fn.completions.html  index.html
llama_core/embeddings/: fn.chunk_text.html  fn.dimension.html  fn.embeddings.html  index.html
llama_core/error/: enum.BackendError.html  enum.LlamaCoreError.html  index.html
llama_core/files/: fn.download_file.html  fn.list_files.html  fn.remove_file.html  fn.retrieve_file.html  fn.retrieve_file_content.html  index.html
llama_core/graph/: enum.EngineType.html  (+3 more)
(+67 files in other folders)
